add popup (doesn't work)

--- a/src/app/modules/map/map.component.html
+++ b/src/app/modules/map/map.component.html
@@ -1,1 +1,5 @@
-<div id="ol-map" class="map-container" (click)="addInteractions()"></div>
+<div id="ol-map" class="map-container" (click)="addInteractions($event)"></div>
+<div id="popup" class="ol-popup">
+	<button id="popup-closer" class="ol-popup-closer" (click)="closePopup()"></button>
+	<div id="popup-content" #popupContent></div>
+</div>
